overflow in x fixed

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html,body{
     height: 100%;
     width: 100%;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 #cursor {
   height: 20px;
